--- a/public/test.html
+++ b/public/test.html
@@ -24,7 +24,7 @@
                   </div>
                   <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="nav navbar-nav navbar-right">
-                          <li><a href="#">Find New Articles</a></li>
+                          <li><a href="/scrape" data-toggle="modal" data-target="#scrapeModal">Find New Articles</a></li>
                           <li><a href="#">Your Saved Articles</a></li>
                           <li><a href="#">Home</a></li>
                     </ul>
@@ -44,21 +44,71 @@
                 <div class="row" id="articles">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Title</h3>
+                            <h3 id='articleTitle' class="panel-title">Title</h3>
                         </div>
                         <div class="panel-body">
-                            <a href="#">Link</a>
+                            <a id='articleLink' href="#">Link</a>
                             <br>
-                            <form class="navbar-form navbar-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
-                                <button type="submit" class="btn btn-danger" id="articleButton">View Comments</button>
-                            </form>
-                            <form class="navbar-form navbar-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
-                                <button type="submit" class="btn btn-primary" id="articleButton">Save Article</button>
+                            <button type="submit" class="btn btn-danger pull-right" data-toggle="modal" data-target="#commentModal" id="commentButton">View Comments</button>
+                            <form class="navbar-form pull-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
+                                <button type="submit" class="btn btn-primary" id="saveButton">Save Article</button>
                             </form>
                         </div>
                     </div>  
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="scrapeModal" tabindex="-1" role="dialog" aria-labelledby="scrapeModalTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="scrapeModalTitle">Scrape Complete!</h5>
+                    </div>
+                    <div class="modal-body">
+                        Article scrape complete. Please refresh to view new articles.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                  <h5 class="modal-title" id="commentModalTitle">Comments</h5>
+                </div>
+                <div class="modal-body" id="commentSection">
+                    <div class="panel panel-default" id="commentSection">
+                        <div class="panel-heading">
+                            <strong id='userName'>Example Username</strong>
+                        </div>
+                        <div id='userComment' class="panel-body">
+                            Example comment
+                        </div>
+                    </div>
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <label for="usr">Name:</label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <label for="comment">Comment:</label>
+                                <textarea class="form-control" rows="5" id="comment"></textarea>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+              </div>
+            </div>
+        </div>
+
 	</body>
 </html>
